<resources>
    <string name="app_name">Lost in Reality</string>
    <string name="server_name">http://www.lostinreality.io</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="sign_up_start_label">Insert your email</string>
    <string name="sign_up_start_email_label">Email</string>
    <string name="sign_up_start_submit_button">Submit</string>
    <string name="sign_up_start_progress">Signing up…</string>
    <string name="sign_up_start_message">A confirmation email was sent to this address. Please, check your email.</string>
    <string name="sign_up_finish_label">Please, finish sign up with the following details.</string>
    <string name="sign_up_finish_first_name_label">First name</string>
    <string name="sign_up_finish_last_name_label">Last name</string>
    <string name="sign_up_finish_password_label">Password</string>
    <string name="sign_up_finish_confirm_password_label">Confirm password</string>
    <string name="sign_up_finish_submit_details_button">Submit</string>
    <string name="sign_up_finish_error_message">An error occurred while trying to sign in.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short (min. 8 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_confirmation">Passwords must match</string>
    <string name="error_field_required">This field is required</string>
    <string name="contacts_permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="storage_permission_rationale">"Access to your storage is needed to find pictures on your device.
    </string>
    <string name="location_permission_rationale">"Location is needed to sort articles close to you.
    </string>

    <string name="delete">DELETE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>

    <string name="offline_message">You are offline.</string>

    <string name="facebook_app_id">1494692634127358</string>
    <string name="fb_login_protocol_scheme">fb1494692634127358</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyBSurs8gUdtlFvSFZhEPBgRjrg311s_tVQ</string>
    <string name="title_activity_select_location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_read_story">ReadStoryActivity</string>

    <string name="action_bar_choose_location">Choose location</string>
    <string name="action_bar_settings">Settings</string>

    <string name="current_location">Current location</string>
    <string name="location_name_hint">(Choose location)</string>

    <string name="picture_location_checkBox_text">Create new sections with picture location</string>
    <string name="picture_caption_default">(caption opcional)</string>

    <string name="action_bar_edit_story">Edit story</string>
    <string name="action_bar_delete_story">Delete story</string>
    <string name="dialog_delete_story">Delete this story?</string>
    <string name="action_bar_share_link">Share story</string>
    <string name="dialog_share_link">Share this story with:</string>


    <string name="action_bar_post">Post</string>
    <string name="action_bar_save">Save</string>


    <string name="title_activity_post_story">Post story</string>

    <string name="action_bar_share_private">Share privately</string>

    <string name="no_location_selected_warning">Select a location before publishing.</string>

    <string name="action_bar_logout">Log out</string>

    <string-array name="post_story_share_scope_options">
        <item>Share story only with followers</item>
        <item>Share story with everyone</item>
        <item>Share story privately</item>
    </string-array>

    <string name="profile_user_stories_label_created_stories">Your stories</string>
    <string name="profile_user_stories_label_user_public_stories">User\' stories</string>
    <string name="profile_no_stories_label"> stories</string>
    <string name="profile_no_bookmarked_stories_label"> bookmarks</string>
    <string name="profile_no_followers_label"> followers</string>
    <string name="profile_follow_button_follow"> follow</string>
    <string name="profile_follow_button_unfollow"> unfollow</string>

    <string name="read_no_bookmarks_label"> bookmarks</string>
    <string name="read_no_likes_label"> likes</string>
    <string name="read_no_views_label"> views</string>

    <string name="main_story_list_publish_draft"> draft</string>
    <string name="main_story_list_publish_everyone"> public</string>
    <string name="main_story_list_publish_followers"> shared with followers</string>
    <string name="main_story_list_publish_private"> shared privately</string>


</resources>
