<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_48dp"
        android:title="@string/action_bar_delete_story"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        android:title="@string/action_bar_edit_story"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_share_link"
        android:icon="@drawable/ic_share_white_48dp"
        android:title="@string/action_bar_share_link"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_like"
        android:icon="@drawable/ic_share_white_48dp"
        android:title="@string/action_bar_share_link"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_border_white_48dp"
        android:title="@string/action_bar_share_link"
        android:visible="false"
        app:showAsAction="always"/>
</menu>