<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_vertical"
    tools:context=".SignUpFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_label"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorContrast"
        android:visibility="visible" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:id="@+id/start_sign_up_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sign_up_start_label"
            android:id="@+id/start_sign_up_label"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorContrast"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view"
                android:layout_weight="1"
                android:theme="@style/textInputLayoutStyle"
                android:paddingRight="6dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/sign_up_start_email_label"
                    android:ems="10"
                    android:id="@+id/start_sign_up_email"
                    android:textColor="@color/colorContrast"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_start_submit_button"
                android:id="@+id/start_sign_up_submit_email_button"
                android:layout_weight="0" android:background="@drawable/transparent_button"
                android:textColor="@color/colorContrast"
                android:padding="5dp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sign_up_start_message"
            android:id="@+id/start_sign_up_message"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorContrast"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finish_sign_up_layout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sign_up_finish_label"
            android:id="@+id/textView14"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorContrast"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/textInputLayoutStyle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/first_name_view"
            android:hint="@string/sign_up_finish_first_name_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/textInputLayoutStyle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/last_name_view"
            android:hint="@string/sign_up_finish_last_name_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/textInputLayoutStyle">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_view"
            android:hint="@string/sign_up_finish_password_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/textInputLayoutStyle">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm_password_view"
            android:hint="@string/sign_up_finish_confirm_password_label" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_finish_submit_details_button"
            android:id="@+id/submit_details_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/transparent_button"
            android:textColor="@color/colorContrast"/>


    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_progress_view"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>